tests/snapshots/examples_fixtures/primop__effect_boundary.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/effect_boundary.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/effect_boundary.flx:1:1
  |
1 | print("== Effect boundary demo ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/primop/effect_boundary.flx:1:1
  |
1 | print("== Effect boundary demo ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/effect_boundary.flx:5:1
  |
5 | print(base);
  | ^^^^^^^^^^^^
  | ------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/effect_boundary.flx:10:1
   |
10 | print(apply_twice(plus1, 40));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/effect_boundary.flx:14:1
   |
14 | let content = read_file("examples/io/input.txt");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/effect_boundary.flx:15:1
   |
15 | print(string_len(content) > 0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: Time).

  --> examples/primop/effect_boundary.flx:17:1
   |
17 | let t0 = clock_now();
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: Time).

  --> examples/primop/effect_boundary.flx:18:1
   |
18 | let t1 = clock_now();
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/effect_boundary.flx:19:1
   |
19 | print(t1 >= t0);
   | ^^^^^^^^^^^^^^^^
   | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 9 errors.
== stdout ==
<not executed>
